# shopkeeper-calculate-mcp-server

./: README.md  README_en.md  main-streamable-http.py  pyproject.toml
src/shopkeeper_calculate_mcp_server/: __init__.py
